fixed the copyright spacing

--- a/themes/perfecttheme/assets/scss/_main.scss
+++ b/themes/perfecttheme/assets/scss/_main.scss
@@ -185,7 +185,7 @@ header {
     }
 
     h3 {
-        font-size: clamp(1.4rem, 1.7vw, 1.7rem);
+        font-size: clamp(1.4rem, 1.6vw, 1.6rem);
         font-weight: 600;
         letter-spacing: .5px;
         line-height: 1.3;
